--- a/multiple-velocities/0_update_featurizer.ipynb
+++ b/multiple-velocities/0_update_featurizer.ipynb
@@ -10,13 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(f\"{os.getcwd()}/../\")\n",
     "from stopping_power_ml.features import ProjectileVelocity\n",
-    "import pickle as pkl\n",
-    "import os"
+    "import pickle as pkl\n"
    ]
   },
   {
@@ -115,9 +117,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -129,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
